--- a/packages/amplify_api_plugin_interface/pubspec.yaml
+++ b/packages/amplify_api_plugin_interface/pubspec.yaml
@@ -7,10 +7,15 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
-  amplify_core: 0.1.4
+  amplify_core:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: withApiName
   meta: ^1.1.8
   uuid: ^3.0.1
 
