--- a/packages/amplify_auth_cognito/pubspec.yaml
+++ b/packages/amplify_auth_cognito/pubspec.yaml
@@ -7,11 +7,20 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.20.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
-  amplify_auth_plugin_interface: 0.1.4
-  amplify_core: 0.1.4
+  amplify_auth_plugin_interface:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_auth_plugin_interface
+      ref: withApiName
+  amplify_core:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: withApiName
   plugin_platform_interface: ^2.0.0
 
 dev_dependencies:
