--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,10 +25,26 @@ dependencies:
   flutter:
     sdk: flutter
   file_picker: ^1.8.0+1
-  amplify_flutter: 0.1.4
-  amplify_analytics_pinpoint: 0.1.4
-  amplify_auth_cognito: 0.1.4
-  amplify_storage_s3: 0.1.4
+  amplify_flutter:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_flutter
+      ref: apiName_version
+  amplify_analytics_pinpoint:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_analytics_pinpoint
+      ref: apiName_version
+  amplify_auth_cognito:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_auth_cognito
+      ref: apiName_version
+  amplify_storage_s3:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_storage_s3
+      ref: apiName_version
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
