--- a/packages/amplify_flutter/pubspec.yaml
+++ b/packages/amplify_flutter/pubspec.yaml
@@ -7,25 +7,70 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.0
-  amplify_storage_plugin_interface: 0.1.4
-  amplify_analytics_plugin_interface: 0.1.4
-  amplify_auth_plugin_interface: 0.1.4
-  amplify_datastore_plugin_interface: 0.1.4
-  amplify_api_plugin_interface: 0.1.4
-  amplify_core: 0.1.4
+  amplify_storage_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_storage_plugin_interface
+      ref: apiName_version
+  amplify_analytics_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_analytics_plugin_interface
+      ref: apiName_version
+  amplify_auth_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_auth_plugin_interface
+      ref: apiName_version
+  amplify_datastore_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_datastore_plugin_interface
+      ref: apiName_version
+  amplify_api_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_api_plugin_interface
+      ref: apiName_version
+  amplify_core: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: apiName_version
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  amplify_api: 0.1.4
-  amplify_analytics_pinpoint: 0.1.4
-  amplify_auth_cognito: 0.1.4
-  amplify_datastore: 0.1.4
-  amplify_storage_s3: 0.1.4
+  amplify_api:  
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_api
+      ref: apiName_version
+  amplify_analytics_pinpoint:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_analytics_pinpoint
+      ref: apiName_version
+  amplify_auth_cognito:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_auth_cognito
+      ref: apiName_version
+  amplify_datastore:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_datastore
+      ref: apiName_version
+  amplify_storage_s3:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_datastore
+      ref: apiName_version
 
 flutter:
   plugin:
