--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,11 +24,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^3.0.0-nullsafety.2
-  amplify_flutter: 0.2.1
-  amplify_analytics_pinpoint: 0.2.1
-  amplify_auth_cognito: 0.2.1
-  amplify_storage_s3: 0.2.1
+  file_picker: ^1.8.0+1
+  amplify_flutter:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_flutter
+      ref: nullSafety_apiName
+  amplify_analytics_pinpoint:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_analytics_pinpoint
+      ref: nullSafety_apiName
+  amplify_auth_cognito:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_auth_cognito
+      ref: nullSafety_apiName
+  amplify_storage_s3:
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_storage_s3
+      ref: nullSafety_apiName
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
