--- a/packages/amplify_analytics_plugin_interface/pubspec.yaml
+++ b/packages/amplify_analytics_plugin_interface/pubspec.yaml
@@ -6,11 +6,16 @@ homepage: https://github.com/aws-amplify/amplify-flutter/tree/main/packages/ampl
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.1.8
-  amplify_core: 0.2.1
+  amplify_core: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: nullSafety_apiName
 
 dev_dependencies:
   flutter_test:
