--- a/packages/amplify_api_plugin_interface/pubspec.yaml
+++ b/packages/amplify_api_plugin_interface/pubspec.yaml
@@ -7,12 +7,17 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
-  amplify_core: 0.2.1
-  meta: ^1.3.0
+  meta: ^1.1.8
   uuid: ^3.0.1
+  amplify_core: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: nullSafety_apiName
 
 dev_dependencies:
   flutter_test:
