--- a/packages/amplify_datastore/pubspec.yaml
+++ b/packages/amplify_datastore/pubspec.yaml
@@ -7,14 +7,23 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
-  amplify_datastore_plugin_interface: 0.2.1
-  amplify_core: 0.2.1
   plugin_platform_interface: ^2.0.0
   meta: ^1.1.8
   collection: ^1.14.13
+  amplify_datastore_plugin_interface: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_datastore_plugin_interface
+      ref: nullSafety_apiName
+  amplify_core: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: nullSafety_apiName
 
 dev_dependencies:
   flutter_test:
