--- a/packages/amplify_datastore_plugin_interface/pubspec.yaml
+++ b/packages/amplify_datastore_plugin_interface/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0"
 
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
@@ -14,7 +15,11 @@ dependencies:
   collection: ^1.15.0
   date_time_format: ^2.0.1
   uuid: ^3.0.1
-  amplify_core: 0.2.1
+  amplify_core: 
+    git:
+      url: git://github.com/jodafm/amplify-flutter.git
+      path: packages/amplify_core
+      ref: nullSafety_apiName
 
 dev_dependencies:
   flutter_test:
